# multimedia_ringtone_library

./: OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  hisysevent.yaml  publicity.xml  ringtone_library.gni
frameworks/ringtone_extension_hap/: BUILD.gn
frameworks/ringtone_extension_hap/RingtoneLibraryExt/: build-profile.json5  hvigorfile.js  package-lock.json  package.json
frameworks/ringtone_extension_hap/RingtoneLibraryExt/AppScope/: app.json
frameworks/ringtone_extension_hap/signature/: ringtonelibrary.p7b  ringtonelibrary_new.p7b
patches/: patches.json
services/: BUILD.gn
services/etc/: ringtone_folder_move.para  ringtone_param.para.dac  ringtone_scanner_param.para  ringtone_setting_datashare.para  ringtone_setting_notifications.para  ringtone_setting_ringtones.para  ringtone_setting_shots.para  ringtonelibrary_param.para
services/ringtone_data_extension/include/: ringtone_bundle_manager.h  ringtone_data_command.h  ringtone_data_manager.h  ringtone_datashare_extension.h  ringtone_datashare_stub_impl.h  ringtone_language_manager.h  ringtone_rdbstore.h  ringtone_subscriber.h  ringtone_unistore.h
services/ringtone_data_extension/src/: ringtone_bundle_manager.cpp  ringtone_data_command.cpp  ringtone_data_manager.cpp  ringtone_datashare_extension.cpp  ringtone_datashare_stub_impl.cpp  ringtone_language_manager.cpp  ringtone_rdbstore.cpp  ringtone_subscriber.cpp
services/ringtone_dfx/include/: dfx_const.h  dfx_manager.h  dfx_reporter.h  dfx_worker.h
services/ringtone_dfx/src/: dfx_manager.cpp  dfx_reporter.cpp  dfx_worker.cpp
services/ringtone_helper/: BUILD.gn
services/ringtone_helper/includ/: ringtone_fetch_result.h
services/ringtone_helper/include/: ringtone_asset.h  ringtone_fetch_result.h  simcard_setting_asset.h  vibrate_asset.h
services/ringtone_helper/src/: haptic_2_tone_asset.cpp  ringtone_asset.cpp  ringtone_check_utils.cpp  ringtone_fetch_result.cpp  simcard_setting_asset.cpp  vibrate_asset.cpp
services/ringtone_restore/include/: customised_tone_processor.h  dualfw_conf_loader.h  dualfw_conf_parser.h  dualfw_sound_setting.h  dualfwk_conf_loader.h  dualfwk_conf_parser.h  dualfwk_sound_setting.h  native_module_ohos_ringtone_restore.h  restore_interface.h  ringtone_dualfw_restore.h  ringtone_dualfwk_restore.h  ringtone_rdb_transaction.h  ringtone_restore.h  ringtone_restore_base.h  ringtone_restore_db_utils.h  ringtone_restore_factory.h  ringtone_restore_napi.h  ringtone_restore_type.h  ringtone_setting_manager.h
services/ringtone_restore/src/: customised_tone_processor.cpp  dualfw_conf_loader.cpp  dualfw_conf_parser.cpp  dualfw_sound_setting.cpp  dualfwk_conf_loader.cpp  dualfwk_conf_parser.cpp  dualfwk_sound_setting.cpp  native_module_ohos_ringtone_restore.cpp  restore_interface.cpp  ringtone_dualfw_restore.cpp  ringtone_dualfwk_restore.cpp  ringtone_rdb_transaction.cpp  ringtone_restore.cpp  ringtone_restore_base.cpp  ringtone_restore_db_utils.cpp  ringtone_restore_factory.cpp  ringtone_restore_napi.cpp  ringtone_setting_manager.cpp
services/ringtone_scanner/include/: iringtone_scanner_callback.h  ringtone_default_setting.h  ringtone_metadata.h  ringtone_metadata_extractor.h  ringtone_scan_executor.h  ringtone_scanner.h  ringtone_scanner_db.h  ringtone_scanner_manager.h  ringtone_scanner_utils.h  ringtone_settings.h
services/ringtone_scanner/src/: ringtone_default_setting.cpp  ringtone_metadata.cpp  ringtone_metadata_extractor.cpp  ringtone_scan_executor.cpp  ringtone_scanner.cpp  ringtone_scanner_db.cpp  ringtone_scanner_manager.cpp  ringtone_scanner_utils.cpp  ringtone_settings.cpp
services/ringtone_setting/include/: ring_mock_haptic_audio_metadata.h  ringtone_metadata.h  ringtone_setting_manager.h  vibrate_metadata.h
services/ringtone_setting/src/: ring_mock_haptic_audio_metadata.cpp  ringtone_metadata.cpp  ringtone_setting_manager.cpp  vibrate_metadata.cpp
services/utils/configs/: userfilemanager_mimetypes.json
services/utils/include/: permission_utils.h  result_set_utils.h  ringtone_errno.h  ringtone_file_utils.h  ringtone_log.h  ringtone_mimetype_utils.h  ringtone_privacy_manager.h  ringtone_props.h  ringtone_rdb_callbacks.h  ringtone_tracer.h  ringtone_utils.h  ringtone_xcollie.h
services/utils/src/: permission_utils.cpp  ringtone_file_utils.cpp  ringtone_mimetype_utils.cpp  ringtone_privacy_manager.cpp  ringtone_props.cpp  ringtone_rdb_callbacks.cpp  ringtone_utils.cpp  ringtone_xcollie.cpp
test/unittest/: BUILD.gn
test/unittest/customised_tone_processor_test/: BUILD.gn
test/unittest/customised_tone_processor_test/include/: customised_tone_processor_test.h
test/unittest/customised_tone_processor_test/src/: customised_tone_processor_test.cpp
test/unittest/get_self_permissions/include/: get_self_permissions.h
test/unittest/get_self_permissions/src/: get_self_permissions.cpp
test/unittest/resources/: ohos_test.xml  setting_system.xml
test/unittest/ringtone_data_extension_test/: BUILD.gn
test/unittest/ringtone_data_extension_test/include/: ringtone_bundle_manager_test.h  ringtone_data_manager_test.h  ringtone_datashare_extension_test.h  ringtone_datashare_stub_impl_test.h  ringtone_language_manager_test.h  ringtone_rdbstore_test.h  ringtone_subscriber_test.h
test/unittest/ringtone_data_extension_test/src/: ringtone_bundle_manager_test.cpp  ringtone_data_manager_test.cpp  ringtone_datashare_extension_test.cpp  ringtone_datashare_stub_impl_test.cpp  ringtone_language_manager_test.cpp  ringtone_rdbstore_test.cpp  ringtone_subscriber_test.cpp
test/unittest/ringtone_dfx_test/: BUILD.gn
test/unittest/ringtone_dfx_test/include/: ringtone_dfx_test.h
test/unittest/ringtone_dualfw_restore_test/: BUILD.gn
test/unittest/ringtone_dualfwk_restore_test/: BUILD.gn
test/unittest/ringtone_helper_test/: BUILD.gn
test/unittest/ringtone_restore_test/: BUILD.gn
test/unittest/ringtone_scanner/: BUILD.gn
test/unittest/ringtone_scanner_test/: BUILD.gn
test/unittest/ringtone_setting_test/: BUILD.gn
test/unittest/ringtone_test/: BUILD.gn
test/unittest/ringtone_utils_test/: BUILD.gn
(+88 files in other folders)
