# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

RINGTONE_ROOT_PATH = "//foundation/multimedia/ringtone_library"
RINGTONE_SERVICES_PATH = "${RINGTONE_ROOT_PATH}/services"
RINGTONE_FRAMEWORKS_PATH = "${RINGTONE_ROOT_PATH}/frameworks"

RINGTONE_SCANNER_PATH = "${RINGTONE_SERVICES_PATH}/ringtone_scanner"
RINGTONE_RESTORE_PATH = "${RINGTONE_SERVICES_PATH}/ringtone_restore"
RINGTONE_EXTENSION_PATH = "${RINGTONE_SERVICES_PATH}/ringtone_data_extension"
RINGTONE_DFX_PATH = "${RINGTONE_SERVICES_PATH}/ringtone_dfx"
RINGTONE_INTERFACES_PATH = "${RINGTONE_ROOT_PATH}/interfaces"
RINGTONE_HELPER_PATH = "${RINGTONE_SERVICES_PATH}/ringtone_helper"
RINGTONE_EXT_HAP_PATH = "${RINGTONE_FRAMEWORKS_PATH}/ringtone_extension_hap"

declare_args() {
  ringtone_link_opt = false
}
