# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/ringtone_library/ringtone_library.gni")

config("ringtone_helper_public_config") {
  visibility = [ ":*" ]
}

ohos_shared_library("ringtone_data_helper") {
  branch_protector_ret = "pac_ret"
  install_enable = true

  include_dirs = [
    "${RINGTONE_SCANNER_PATH}/include",
    "${RINGTONE_RESTORE_PATH}/include",
    "${RINGTONE_EXTENSION_PATH}/include",
    "${RINGTONE_DFX_PATH}/include",
    "${RINGTONE_SERVICES_PATH}/utils/include",
    "${RINGTONE_INTERFACES_PATH}/inner_api/native",
  ]

  sources = [
    "src/ringtone_asset.cpp",
    "src/ringtone_fetch_result.cpp",
    "src/simcard_setting_asset.cpp",
    "src/vibrate_asset.cpp",
  ]

  public_configs = [ ":ringtone_helper_public_config" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-Wno-unused-but-set-variable",
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]

  cflags_cc = [
    "-fvisibility-inlines-hidden",
    "-Os",
  ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "app_file_service:sandbox_helper_native",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
    "kv_store:distributeddata_inner",
    "relational_store:native_rdb",
  ]

  if (!ringtone_link_opt) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
      integer_overflow = true
      ubsan = true
      boundary_sanitize = true
    }
  }

  subsystem_name = "multimedia"
  part_name = "ringtone_library"
}
