# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("test") {
  testonly = true

  deps = [
    "ringtone_data_extension_test:ringtone_data_extension_unittest",
    "ringtone_dfx_test:ringtone_dfx_unittest",
    "ringtone_helper_test:ringtone_helper_unittest",
    "ringtone_restore_test:ringtone_restore_unittest",
    "ringtone_scanner:ringtone_read_test",
    "ringtone_scanner:ringtone_scanner_test",
    "ringtone_scanner:ringtone_test",
    "ringtone_scanner_test:ringtone_scanner_unittest",
    "ringtone_setting_test:ringtone_setting_unittest",
    "ringtone_test:ringtone_unittest",
    "ringtone_utils_test:ringtone_utils_unittest",
  ]
}
