# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/ringtone_library/ringtone_library.gni")

group("unittest") {
  testonly = true

  deps = [":ringtone_restore_unittest"]
}

ohos_unittest("ringtone_restore_unittest") {
  module_out_path = "ringtone_library/ringtonelibraryextention"

  include_dirs = [
    "./include",
    "${RINGTONE_RESTORE_PATH}/include",
  ]

  sources = [
    "./src/ringtone_source.cpp",
    "./src/ringtone_restore_test.cpp",
  ]

  deps = [
    "${RINGTONE_ROOT_PATH}/services:ringtonerestore",
    "${RINGTONE_ROOT_PATH}/services:ringtone_data_extension",
  ]

  external_deps = [
    "relational_store:native_rdb",
    "relational_store:rdb_data_share_adapter",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  resource_config_file =
    "${RINGTONE_ROOT_PATH}/test/unittest/ringtone_restore_test/resources/ohos_test.xml"

  if (is_standard_system) {
    external_deps += [ "hilog:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}