# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/ringtone_library/ringtone_library.gni")

group("unittest") {
  testonly = true

  deps = [ ":ringtone_restore_unittest" ]
}

ohos_unittest("ringtone_restore_unittest") {
  module_out_path = "ringtone_library/ringtonelibraryextention"

  include_dirs = [
    "./include",
    "../ringtone_unittest_utils/include",
    "${RINGTONE_RESTORE_PATH}/include",
    "${RINGTONE_UTILS_PATH}/include",
    "${RINGTONE_SETTING_PATH}/include",
    "${RINGTONE_INTERFACES_PATH}/inner_api/native",
  ]

  sources = [
    "${RINGTONE_RESTORE_PATH}/src/customised_tone_processor.cpp",
    "${RINGTONE_RESTORE_PATH}/src/dualfwk_conf_loader.cpp",
    "${RINGTONE_RESTORE_PATH}/src/dualfwk_conf_parser.cpp",
    "${RINGTONE_RESTORE_PATH}/src/dualfwk_sound_setting.cpp",
    "${RINGTONE_RESTORE_PATH}/src/native_module_ohos_ringtone_restore.cpp",
    "${RINGTONE_RESTORE_PATH}/src/ringtone_dualfwk_restore.cpp",
    "${RINGTONE_RESTORE_PATH}/src/ringtone_rdb_transaction.cpp",
    "${RINGTONE_RESTORE_PATH}/src/ringtone_restore.cpp",
    "${RINGTONE_RESTORE_PATH}/src/ringtone_restore_base.cpp",
    "${RINGTONE_RESTORE_PATH}/src/ringtone_restore_db_utils.cpp",
    "${RINGTONE_RESTORE_PATH}/src/ringtone_restore_factory.cpp",
    "${RINGTONE_RESTORE_PATH}/src/ringtone_restore_napi.cpp",
    "../ringtone_unittest_utils/src/ringtone_unittest_utils.cpp",
    "./src/ringtone_restore_test.cpp",
    "./src/ringtone_source.cpp",
  ]

  configs = [ "//build/config/compiler:exceptions" ]

  deps = [
    "${RINGTONE_ROOT_PATH}/services:ringtone_data_extension",
    "${RINGTONE_ROOT_PATH}/services:ringtone_setting",
    "${RINGTONE_ROOT_PATH}/services:ringtone_utils",
    "${RINGTONE_ROOT_PATH}/services:ringtonerestore",
  ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:app_manager",
    "ability_runtime:extensionkit_native",
    "ability_runtime:runtime",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "data_share:datashare_provider",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
    "libxml2:libxml2",
    "napi:ace_napi",
    "os_account:os_account_innerkits",
    "player_framework:media_client",
    "preferences:native_preferences",
    "relational_store:native_rdb",
    "relational_store:rdb_data_share_adapter",
    "samgr:samgr_proxy",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  resource_config_file =
      "${RINGTONE_ROOT_PATH}/test/unittest/resources/ohos_test.xml"

  if (is_standard_system) {
    external_deps += [ "hilog:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}
